       their output stream on EOF from read.
    ** CONCATENATED-STREAM-STREAMS discards constituent streams which
       have been read to end-of-file.
    ** CLOSE works as expected on the null CONCATENATED-STREAM, and on
       STRING-STREAMS.
    ** Printing symbols with *PRINT-CASE* :CAPITALIZE respects the
       description of determination of which consecutive characters
       constitute a word.
    ** Printing the "Space" character with escaping on now yields "#\\ ", 
       rather than "#\\Space", as mandated by ANSI 22.1.3.2.
    ** Reading floating-point numbers with *READ-BASE* set to a number
       less than 10 works correctly.
    ** Reading floating-point numbers with *READ-BASE* set to a number
       more than 10 works correctly.
    ** Printing with *PRINT-READABLY* targets the standard readtable, not
       the readtable currently in effect.

changes in sbcl-0.8.10 relative to sbcl-0.8.9:
  * bug fix: compiler emitted division in optimized DEREF.  (thanks for
    the test case to Dave Roberts)
  * bug fix: multidimensional simple arrays loaded from FASLs had fill
    pointers.  (reported by Sean Ross)

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.