@@ -49,3 +49,10 @@
         3
         0)
   ("no" "maybe" "yes" "yes"))
+
+(define-optimization-quality stack-allocate-dynamic-extent
+    (if (and (> (max speed space) (max debug safety))
+	     (< safety 3))
+	3
+	0)
+  ("no" "maybe" "yes" "yes"))
